style.css
html {
    font-family: arial;
    --nav-color: #1c94d3;
    --foreground-color: white;
    --middle-color: #e2e8f0;
    --flair-color: #f0b429;
}

body {
    display: grid;
    grid-template-columns: max-content auto;
    grid-template-rows: 1fr 6fr;
    grid-template-areas:
        "nav header"
        "nav main";

    height: 100vh;
    margin: 0;
}

nav {
    background: var(--nav-color);
    color: var(--foreground-color);
    grid-area: nav;
}

header {
    grid-area: header;
}

main {
    background: var(--middle-color);
    grid-area: main;
}

svg {
    fill: currentColor;
}

nav {
    &>* {
        margin: 0;
        padding: 30px 0px;
    }

    & a {
        padding: 5px 50px 5px 15px;
        color: inherit;
        text-decoration: inherit;
        display: flex;
        align-items: center;

        & svg {
            height: 40px;
            width: 40px;
            padding-right: 10px;
        }
    }

    & a:hover {
        backdrop-filter: brightness(85%);
    }

    & #title {
        font-size: 1.5em;
        padding-top: 15px;
        padding-bottom: 15px;
    }

    & ul {
        list-style: none;

        & li {
            padding: 0;
            font-size: 1.1em;
        }

        & svg {
            transform: scale(0.6);
        }
    }
}

